K8s-CNF-Practice-Workbook V2/workbook-Module 3/chf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chf-oam
  namespace: chf-w
spec:
  ingressClassName: nginx
  rules:
    - host: chf-oam.telco.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chf-oam
                port:
                  number: 8080
