K8s-CNF-Practice-Workbook V2/workbook-Module 3/upf-netpol-fixed.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: upf-cnf-access
  namespace: upf
spec:
  podSelector:
    matchLabels:
      cnf: upf

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: smf

      ports:
        - protocol: TCP
          port: 8080

        - protocol: UDP
          port: 8805
